--- a/lenses/templates/lenses/lens_cede_ownership.html
+++ b/lenses/templates/lenses/lens_cede_ownership.html
@@ -1,68 +1,41 @@
-{% extends 'master_header.html' %}
-{% load static %}
+{% extends "modal_base.html" %}
+
+{% block title %}
+Cede ownership?
+{% endblock title %}
+
+
 {% block content %}
-
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
-<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
-<script type="text/javascript" src="{% static 'lenses/js/autocomplete.js' %}"></script>
 <input type="hidden" id="Urlusers" data-url="{% url 'api:users-view' %}" />
-<script>
-  $(document).ready(function(){
-      // Create Select2 for the users
-      users_autocomplete("users-autocomplete");
 
-      // Attach requirement for user to the submit button
-      $('#submit-btn').on('click',function(event){
-	  var selections = $('#users-autocomplete').find(':selected');
-	  if( selections.length == 0 ){
-	      alert('You must select a user!');
-	      event.preventDefault();
-	  }
-      });
-
-      // Check all the checkboxes
-      var checkboxes = document.querySelectorAll('.content input[type="checkbox"]');
-      if( checkboxes.length > 0){
-	  for(var i=0;i<checkboxes.length;i++){
-	      checkboxes[i].checked = true;
-	  }
-      }
-  });
-</script>
-
-
-<h1>Cede Ownership of lenses</h1>
-<p>
-  Pass the torch.
-</p>
-
-<div class="content">
-  <form id="ids-form" method="POST">
-    {% csrf_token %}
-    <span class="errorlist">{{ error_message }}</span>
-
-    <div style="width:100%;">
-      <p>
-	Users:
-      </p>
-      <select id="users-autocomplete" name="user"></select>
-    </div>
-
-    <br>
-    <br>
-    
-    {% include "lenses/lens_list_executive.html" with lenses=lenses %}
-
-    <div>
-      <textarea name="justification" placeholder="Any message for the new owner?" cols="60" rows="3"></textarea>
-    </div>
-    
-  </form>
+<div>
+  {{ form.heir }}
 </div>
 
 <div>
-  <button type="submit" id="submit-btn" form="ids-form">Cede ownership</button>
+  <ul>
+    {% for lens in lenses %}
+    <li>{{ lens }}</li>
+    {% endfor %}
+  </ul>
 </div>
 
+<div>
+  {{ form.justification }}
+</div>
+
+{{ form.ids }}
 {% endblock content %}
+
+
+{% block action_button %}
+<button type="submit" class="btn btn-sm btn-danger">Cede ownership</button>
+{% endblock action_button %}
+
+
+{% block extrascripts %}
+<script>
+  // Create Select2 for the users
+  users_autocomplete('id_heir');
+</script>
+{% endblock extrascripts %}
