--- a/templates/user_index.html
+++ b/templates/user_index.html
@@ -220,8 +220,10 @@
 
 
 {% block extrascripts %}
-<script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
-<script src="{% static 'js/bootstrap.min.js' %}"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+<!-- <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script> -->
+<!-- <script src="{% static 'js/bootstrap.min.js' %}"></script> -->
 <script src="{% static 'js/jquery.bootstrap.modal.forms.js' %}"></script>
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 <script type="text/javascript" src="{% static 'lenses/js/autocomplete.js' %}"></script>
