--- a/templates/user_index.html
+++ b/templates/user_index.html
@@ -208,7 +208,8 @@
 
 
 {% block extrastyles %}
-<link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+<!-- <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}"> -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
 <style>
   .notifications td {margin:0px;padding:2px;}
