--- a/templates/register.html
+++ b/templates/register.html
@@ -1,12 +1,93 @@
 {% extends 'master_header.html' %}
+{% load static %}
 
-{% block title %}Create an Account{% endblock %}
-{% load crispy_forms_tags %}
+<!-- {% block title %}Create an Account{% endblock %}
+{% load crispy_forms_tags %} -->
+
+{% block extrastyles %}
+<link href="{% static 'css/normalize.css' %}" rel="stylesheet" type="text/css">
+<link href="{% static 'css/webflow.css' %}" rel="stylesheet" type="text/css">
+<link href="{% static 'css/sled-8290ef.webflow.css' %}" rel="stylesheet" type="text/css">
+{% endblock extrastyles %}
+
+{% block extrascripts %}
+<script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6197b5e05cae6979d73d5ab0" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+<script src="{% static 'login/js/webflow.js' %}" type="text/javascript"></script>
+{% endblock extrascripts %}
+
 
 {% block content %}
-    <form method="POST" class="form-group">
-	{% csrf_token %}
-	{{ form|crispy }}
-	<button type="submit" class="btn btn-success">Register</button>
-    </form>
+  <div class="sign-up-wrap w-container">
+    <div class="w-form">
+
+    <form id="email-form" class="form-2" method="post" action="{% url 'register' %}">
+      <img src="{% static 'images/0SLED_Logo-Login.png' %}" loading="lazy" width="40" alt="" class="image-7">
+      {% csrf_token %}
+
+
+     <!--{{ form.as_p }}-->
+
+
+      {{ form.non_field_errors }}
+      <div class="form-group">
+          <label for="{{ form.username.id_for_label }}">Username*:</label>
+          {{ form.username }}
+          {{ form.username.errors }}
+      </div>
+
+      <div class="form-group">
+          <label for="{{ form.email.id_for_label }}">Email*:</label>
+          {{ form.email }}
+          {{ form.email.errors }}
+      </div>
+
+      <div class="form-group">
+          <label for="{{ form.password1.id_for_label }}">Password*:</label>
+          {{ form.password1 }}
+          {{ form.password1.errors }}
+      </div>
+
+      <div class="form-group">
+          <label for="{{ form.password2.id_for_label }}">Password confirmation*:</label>
+          {{ form.password2 }}
+          {{ form.password2.errors }}
+      </div>
+
+      <div class="form-group">
+          <label for="{{ form.affiliation.id_for_label }}">Affiliation*:</label>
+          {{ form.affiliation }}
+          {{ form.affiliation.errors }}
+      </div>
+
+      <br>
+  	<input type="submit" value="Register" data-wait="Please wait..." class="submit-button-2 w-button">
+  </form> 
+    </div>
+  </div>
+
+    <!--<div class="sign-up-wrap w-container">
+      <div class="w-form">
+
+        <form id="email-form" name="email-form" data-name="Email Form" method="post" class="form-2">
+          <img src="{% static 'images/0SLED_Logo-Login.png' %}" loading="lazy" width="40" alt="" class="image-7"><label for="name" class="field-label">Username*</label><input type="text" class="text-field w-input" maxlength="256" name="name" data-name="Name" placeholder="" id="name" required=""><label for="email" class="field-label-2">Email Address*</label><input type="email" class="text-field-2 w-input" maxlength="256" name="email" data-name="Email" placeholder="" id="email" required=""><label for="email-2" class="field-label-2">Password*</label><input type="password" class="text-field-2 w-input" maxlength="256" name="email-2" data-name="Email 2" placeholder="" id="email-2" required=""><label for="email-2" class="field-label-2">Password Confirmation*</label><input type="password" class="text-field-2 w-input" maxlength="256" name="email-2" data-name="Email 2" placeholder="" id="email-2" required=""><label for="email-3" class="field-label-2">Affiliation*</label><input type="text" class="text-field-2 w-input" maxlength="256" name="email-2" data-name="Email 2" placeholder="" id="email-2" required=""><input type="submit" value="Register" data-wait="Please wait..." class="submit-button-2 w-button">
+        {% csrf_token %}
+      </form>
+        <div class="success-message w-form-done">
+          <div class="text-block">Thank you! You've now registered for SLED.</div>
+        </div>
+        <div class="error-message w-form-fail">
+          <div class="text-block-2">Oops! Something went wrong while submitting the form.</div>
+        </div>
+      </div>
+    </div>-->
+
+    <script type="text/javascript">
+      $('form').each(function() {
+          if (!$(this).is('[action]')) {
+              $(this).attr('action', '/');
+          }
+      });
+      // $('#id_username').addClass('text-field',"w-input").attr({"data-name":'Name'});
+    </script>
+
 {% endblock %}
