Fixed some conflicts with bootstrap. See this commit for how to have the select2 drop down properly appear in a modal.

--- a/sled_notifications/templates/sled_notifications/notifications_list.html
+++ b/sled_notifications/templates/sled_notifications/notifications_list.html
@@ -23,6 +23,7 @@
     <tbody>
       {% for note in notes %}
       <tr>
+	<td>{{ note.timestamp }}</td>
 	<td>{{ note.actor }}</td>
 	<td>{{ note.recipient }}</td>
 	<td>{{ note.data.note_type }}</td>
