--- a/groups/templates/groups/group_detail.html
+++ b/groups/templates/groups/group_detail.html
@@ -1,13 +1,47 @@
 {% extends 'master_header.html' %}
 {% load static %}
-{% block content %}
 
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+{% block extrascripts %}
+<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
-<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
 <script type="text/javascript" src="{% static 'lenses/js/autocomplete.js' %}"></script>
+<script type="text/javascript">
+  $(document).ready(function(){
+      // Create Select2 for users and groups
+      users_autocomplete("users-autocomplete1");
+      users_autocomplete("users-autocomplete2");
+      
+      // Attach requirement for user or group to the submit button
+      $('#submit-btn').on('click',function(event){
+          var users1 = $('#users-autocomplete1').find(':selected');
+          var users2 = $('#users-autocomplete2').find(':selected');
+          if( users1.length == 0 && users2.length==0 ){
+              alert('You must select a user!');
+              event.preventDefault();
+          }
+      });
+      
+      // Check all the checkboxes
+      var checkboxes = document.querySelectorAll('.content input[type="checkbox"]');
+      if( checkboxes.length > 0){
+          for(var i=0;i<checkboxes.length;i++){
+              checkboxes[i].checked = true;
+          }
+      }
+  });
+</script>
+{% endblock extrascripts %}
 
+
+
+{% block extrastyles %}
+<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+{% endblock extrastyles %}
+
+
+
+{% block content %}
 <input type="hidden" id="Urlusers" data-url="{% url 'api:users-view' %}" />
 <input type="hidden" id="Urlgroups" data-url="{% url 'api:groups-view' %}" />
 
@@ -36,32 +70,6 @@
     </table>
     {% if  group.owner == user %}
         <p> ADD NEW USERS </p>
-
-    <script>
-      $(document).ready(function(){
-          // Create Select2 for users and groups
-          users_autocomplete("users-autocomplete1");
-          users_autocomplete("users-autocomplete2");
-
-          // Attach requirement for user or group to the submit button
-          $('#submit-btn').on('click',function(event){
-          var users1 = $('#users-autocomplete1').find(':selected');
-          var users2 = $('#users-autocomplete2').find(':selected');
-          if( users1.length == 0 && users2.length==0 ){
-              alert('You must select a user!');
-              event.preventDefault();
-          }
-          });
-          
-          // Check all the checkboxes
-          var checkboxes = document.querySelectorAll('.content input[type="checkbox"]');
-          if( checkboxes.length > 0){
-          for(var i=0;i<checkboxes.length;i++){
-              checkboxes[i].checked = true;
-          }
-          }
-      });
-    </script>
 
     <div class="content">
       <form id="ids-form" method="POST">
