--- a/lenses/templates/lenses/lens_give_revoke_access.html
+++ b/lenses/templates/lenses/lens_give_revoke_access.html
@@ -1,7 +1,11 @@
 {% extends "modal_base.html" %}
 
 {% block title %}
+{% if view.kwargs.mode == 'revoke' %}
+Revoke access from Users and Groups?
+{% else %}
 Give access to Users and Groups?
+{% endif %}
 {% endblock title %}
 
 
@@ -45,7 +49,13 @@ Give access to Users and Groups?
 
 
 {% block action_button %}
-<button type="submit" class="btn btn-sm btn-danger">Give access</button>
+<button type="submit" class="btn btn-sm btn-danger">
+  {% if view.kwargs.mode == 'revoke' %}
+  Revoke access
+  {% else %}
+  Give access
+  {% endif %}
+</button>
 {% endblock action_button %}
 
 
@@ -53,5 +63,19 @@ Give access to Users and Groups?
 <script>
   users_autocomplete("id_users");
   groups_autocomplete("id_groups");
+  
+  // The following is needed for select2 to work properly in a modal
+  $('#id_users').select2({
+      width: '100%',
+      placeholder: 'Search for a user',
+      minimumInputLength: 1,
+      dropdownParent: $('#id-modal')
+  });
+  $('#id_groups').select2({
+      width: '100%',
+      placeholder: 'Search for a group',
+      minimumInputLength: 1,
+      dropdownParent: $('#id-modal')
+  });
 </script>
 {% endblock extrascripts %}
