--- a/groups/templates/groups/group_detail.html
+++ b/groups/templates/groups/group_detail.html
@@ -2,12 +2,135 @@
 {% load static %}
 
 
+{% block content %}
+
+<!-- Hidden elements needed for the user and group autocomplete -->
+<input type="hidden" id="Urlusers" data-url="{% url 'api:users-view' %}" />
+<input type="hidden" id="Urlgroups" data-url="{% url 'api:groups-view' %}" />
+
+<!-- Modal divs -->
+<div class="modal fade" tabindex="-1" role="dialog" id="id-modal">
+  <div class="modal-dialog">
+    <div class="modal-content"></div>
+  </div>
+</div>
+
+
+{% if  group.owner != user %}
+<div class="modal fade" tabindex="-1" role="dialog" id="id-modal-leave">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+	<h5 class="modal-title">Are you sure you want to leave this group?</h5>
+	<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+	  <span aria-hidden="true">&times;</span>
+	</button>
+      </div>
+      <div class="modal-footer">
+	<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+	<form id="dum-form" method="POST">
+	  {% csrf_token %}
+	</form>
+	<button type="submit" form="dum-form" class="btn btn-danger">Leave</button>
+      </div>
+    </div>
+  </div>
+</div>
+{% endif %}
+
+
+
+
+<h1>{{ group.name }}</h1>
+
+<hr>
+
+<!-- Div with some information about the group and different actions for users or the owner -->
+<div>
+  <p> Description: {{ group.description }}</p>
+  <p> Owner: {{ group.owner }}</p>
+
+  {% if  group.owner == user %}
+  <button type="button" id="delete-group" class="btn btn-sm btn-danger" data-form-url="{% url 'groups:group-delete' group.pk %}">
+    <img src="{% static 'icons/trash.svg' %}" alt="trash">
+    Delete
+  </button>
+  <button type="button" id="update-group" class="btn btn-sm btn-primary" data-form-url="{% url 'groups:group-update' group.pk %}">
+    <img src="{% static 'icons/pencil.svg' %}" alt="pencil">
+    Update
+  </button>
+  {% else %}
+  <button type="button" class="btn btn-sm btn-primary" data-toggle="modal" data-target="#id-modal-leave">
+    <img src="{% static 'icons/pencil.svg' %}" alt="pencil">
+    Leave group
+  </button>
+  {% endif %}
+</div>
+
+<hr>
+
+<!-- List of users in the group -->
+<div>
+  <p>List of group members</p>
+  <table>
+    <tr>
+      <th>Name</th>
+      <th>Affiliation</th>
+    </tr>
+    {% for user in group.getAllMembers %}
+    <tr>
+      <td>{{user.username}}</td>
+      <td>{{user.affiliation}}</td>
+    </tr>
+    {% endfor %}
+  </table>
+</div>
+
+<hr>
+
+<!-- Actions for the group owner -->
+{% if  group.owner == user %}
+<div>
+  <p> ADD/Remove USERS</p>
+  
+  <form id="ids-form" method="POST" action="">
+    {% csrf_token %}
+    <span class="errorlist">{{ error_message }}</span>
+    <div>
+      <p>Add Users:</p>
+      <select id="users-autocomplete1" name="addusers" multiple></select>
+    </div>
+    <div>
+      <p>Remove Users:</p>
+      <select id="users-autocomplete2" name="removeusers" multiple></select>
+    </div>
+  </form>
+
+  <button type="submit" id="submit-btn" form="ids-form">Submit</button>
+</div>
+{% endif %}
+
+<hr>
+{% endblock content %}
+
+
+{% block extrastyles %}
+<!-- THe line below is to style the drop down auto-complete text input -->
+<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+<!-- The line below is to style the buttons  -->
+<link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+{% endblock extrastyles %}
+
+
 {% block extrascripts %}
-<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+<script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 <script type="text/javascript" src="{% static 'lenses/js/autocomplete.js' %}"></script>
+<script src="{% static 'js/bootstrap.min.js' %}"></script>
+<script src="{% static 'js/jquery.bootstrap.modal.forms.js' %}"></script>
 <script type="text/javascript">
   $(document).ready(function(){
+
       // Create Select2 for users and groups
       users_autocomplete("users-autocomplete1");
       users_autocomplete("users-autocomplete2");
@@ -29,84 +152,23 @@
               checkboxes[i].checked = true;
           }
       }
+
+      // Modals
+      $('#delete-group').modalForm({
+ 	  formURL: $('#delete-group').data("form-url"),
+ 	  modalID: "#id-modal",
+ 	  isDeleteForm: true
+      });
+      
+      $("#update-group").modalForm({
+          formURL: $("#update-group").data("form-url"),
+ 	  modalID: "#id-modal"
+      });
+
+      $(".alert").fadeTo(2000, 500).slideUp(500, function () {
+          $(".alert").slideUp(500);
+      });
+
   });
 </script>
 {% endblock extrascripts %}
-
-
-
-{% block extrastyles %}
-<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
-{% endblock extrastyles %}
-
-
-
-{% block content %}
-<input type="hidden" id="Urlusers" data-url="{% url 'api:users-view' %}" />
-<input type="hidden" id="Urlgroups" data-url="{% url 'api:groups-view' %}" />
-
-{% csrf_token %}
-<div class="content container">
-    <p class="centred_name">{{group.name}}</p>
-</div>
-
-<p> Description: {{group.description}}</p>
-<p> Owner: {{group.owner}}</p>
-
-
-<p class="centred_name">List of group members</p>
-<div class="content container">
-    <table class="sortable">
-        <tr>
-            <th class="th-center">Name</th>
-            <th class="th-center">Affiliation</th>
-        </tr>
-    {% for user in group.getAllMembers %}
-        <tr>
-            <td class="td-center">{{user.username}}</a></td>
-            <td class="td-center">{{user.affiliation}}</a></td>
-        </tr>
-    {% endfor %}
-    </table>
-    {% if  group.owner == user %}
-        <p> ADD NEW USERS </p>
-
-    <div class="content">
-      <form id="ids-form" method="POST">
-        {% csrf_token %}
-        <span class="errorlist">{{ error_message }}</span>
-
-
-        <div style="width:100%;">
-          <p>
-        Add Users:
-          </p>
-          <select id="users-autocomplete1" name="addusers" multiple></select>
-        </div>
-
-
-        <br>
-        <br>
-        <div style="width:100%;">
-          <p>
-        Remove Users:
-          </p>
-          <select id="users-autocomplete2" name="removeusers" multiple></select>
-        </div>
-
-        <br>
-        <br>
-
-      </form>
-    </div>
-
-    <div>
-      <button type="submit" id="submit-btn" form="ids-form">
-        Submit
-      </button>
-    </div>
-
-
-    {% endif %}
-
-{% endblock content %}
