--- a/groups/templates/groups/group_update.html
+++ b/groups/templates/groups/group_update.html
@@ -2,7 +2,7 @@
 
 
 <div class="modal-header">
-  <h3 class="modal-title">Update Collection</h3>
+  <h3 class="modal-title">Update Group</h3>
   <button type="button" class="close" data-dismiss="modal" aria-label="Close">
     <span aria-hidden="true">&times;</span>
   </button>
@@ -14,7 +14,7 @@
     <div class="container-fluid">
       <div class="row">
 	<div class="col-12">
-	  <p>Are you sure you want to update collection named <strong>{{collection.name}}</strong>?</p>
+	  <p>Are you sure you want to update group named <strong>{{group.name}}</strong>?</p>
 	</div>
       </div>
       <div class="row">
